--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
          </div>
     </nav>
     <!--/ NAVBAR END /-->
+
     <!--/ HOME /-->
     <div id="home" class="intro route bg-image" style="background-image: url(img/background.jpg)">
         <div class="overlay-itro"></div>
@@ -51,6 +52,7 @@
         </div>
     </div>
     <!--/ HOME END /-->
+
     <!--/ About /-->
     <section id="about" class="about-mf sect-pt4 route">
         <div class="container">
@@ -146,6 +148,7 @@
             </div>
     </section>
     <!--/ ABOUT END /-->
+
     <!--/ EDUCATION /-->
     <section id="education" class="educaion-mf route">
         <div class="countainer">
@@ -194,6 +197,7 @@
         </div>
     </section>
     <!--/EDUCATION END /-->
+
     <!--/ HOBBY /-->
     <section id="hobby" class="hobby-mf route">
         <div class="container">
@@ -242,6 +246,7 @@
         </div>
     </section>
     <!--/ HOBBY END /-->
+
     <!--/ CONTACT /-->
     <section id="contact" class="contact-mf route">
         <div class="container">
@@ -313,14 +318,9 @@
     <div id="preloader"></div>
 
     <!-- JAVA SCRIPT -->
-    <script src="lib/jquery/jquery.min.js"></script>
-    <script src="lib/jquery/jquery.migrate.js"></script>
-    <script src="lib/bootstrap/js/bootstrap.min.js"></script>
-    <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/counterup/jquery.waypoints.min.js"></script>
-    <script src="lib/counterup/jquery.counterup.js"></script>
-    <script src="lib/lightbox/js/lightbox.min.js"></script>
-    <script src="lib/typed/typed.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
+
 </body>
 </html>
