--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
     </section>
     <!--/ CONTACT END /-->
 
-    <a href="#" class="back-to-top"><i class="fa-solid fa-chevrons-up"></i></a>
+    <a href="#" class="back-to-top"><i class="fa-regular fa-up"></i></a>
     <div id="preloader"></div>
 
     <!-- JAVA SCRIPT -->
