--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <!--/ CSS /-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.css" integrity="sha512-Woz+DqWYJ51bpVk5Fv0yES/edIMXjj3Ynda+KWTIkGoynAMHrqTcDUQltbipuiaD5ymEo9520lyoVOo9jCQOCA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="css/style.css" rel="stylesheet" />
 
@@ -14,31 +15,30 @@
 
 <body id="page-top">
     <!--/ NAVBAR /-->
-    <nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top"
-         <div class="container">
-             <div class="navbar-collapse collapse justify-content-end" id="navbarDefault">
-                 <ul class="navbar-nav">
-                     <li class="nav-item">
-                         <a class="nav-link js-scroll active" href="#home">Home</a>
-                     </li>
-                     <li class="nav-item">
-                         <a class="nav-link js-scroll" href="#about">About</a>
-                     </li>
-                     <li class="nav-item">
-                         <a class="nav-link js-scroll" href="#education">Education</a>
-                     </li>
-                     <li class="nav-item">
-                         <a class="nav-link js-scroll" href="#hobby">Hobby</a>
-                     </li>
-                     <li class="nav-item">
-                         <a class="nav-link js-scroll" href="#contact">Contact</a>
-                     </li>
-                 </ul>
-             </div>
-         </div>
+    <nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top" id="mainNav">
+        <div class="container">
+            <div class="navbar-collapse collapse justify-content-end" id="navbarDefault">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll active" href="#home">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll" href="#about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll" href="#education">Education</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll" href="#hobby">Hobby</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll" href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </nav>
     <!--/ NAVBAR END /-->
-
     <!--/ HOME /-->
     <div id="home" class="intro route bg-image" style="background-image: url(img/background.jpg)">
         <div class="overlay-itro"></div>
@@ -46,13 +46,12 @@
             <div class="table-cell">
                 <div class="container">
                     <h1 class="intro-title mb-4">Halo Nama Saya Ivan</h1>
-                    <p class="intro-subtitle"><span class="text-slider-items">Mahasiswa Teknologi Informasi, Universitas Gadjah Mada</span><strong class="text-slider-items"</strong></p>
+                    <p class="intro-subtitle"><span class="text-slider-items">Mahasiswa Teknologi Informasi, Universitas Gadjah Mada</span><strong class="text-slider-items"></strong></p>
                 </div>
             </div>
         </div>
     </div>
     <!--/ HOME END /-->
-
     <!--/ About /-->
     <section id="about" class="about-mf sect-pt4 route">
         <div class="container">
@@ -84,7 +83,6 @@
                                         </div>
                                     </div>
                                 </div>
-
                             </div>
                             <div class="col-md-6">
                                 <div class="about-me pt-4 pt-md-0">
@@ -146,9 +144,9 @@
                     </div>
                 </div>
             </div>
+        </div>
     </section>
     <!--/ ABOUT END /-->
-
     <!--/ EDUCATION /-->
     <section id="education" class="educaion-mf route">
         <div class="countainer">
@@ -197,7 +195,6 @@
         </div>
     </section>
     <!--/EDUCATION END /-->
-
     <!--/ HOBBY /-->
     <section id="hobby" class="hobby-mf route">
         <div class="container">
@@ -246,7 +243,6 @@
         </div>
     </section>
     <!--/ HOBBY END /-->
-
     <!--/ CONTACT /-->
     <section id="contact" class="contact-mf route">
         <div class="container">
@@ -302,11 +298,23 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="contact-ico">
-                        <span class="ico-circle"><i class="fa-brands fa-linkedin"></i></span>
+                    <div class="contact-box">
+                        <div class="contact-ico">
+                            <span class="ico-circle"><i class="fa-brands fa-linkedin"></i></span>
+                        </div>
+                        <div class="contact-content">
+                            <h4>Ivan Rifqi Riadhy</h4>
+                        </div>
                     </div>
-                    <div class="contact-content">
-                        <h4>Ivan Rifqi Riadhy</h4>
+                </div>
+                <div class="col-md-4">
+                    <div class="contact-box">
+                        <div class="contact-ico">
+                            <span class="ico-circle"><i class="fa-brands fa-twitter"></i></span>
+                        </div>
+                        <div class="contact-content">
+                            <h4>IvQ</h4>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -314,12 +322,14 @@
     </section>
     <!--/ CONTACT END /-->
 
-    <a href="#" class="back-to-top"><i class="fa-regular fa-up"></i></a>
+    <a href="#" class="back-to-top"><i class="fa-solid fa-arrow-up"></i></a>
     <div id="preloader"></div>
 
     <!-- JAVA SCRIPT -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js" integrity="sha512-k2GFCTbp9rQU412BStrcD/rlwv1PYec9SNrkbQlo6RZCf75l6KcC3UwDY8H5n5hl4v77IDtIPwOk9Dqjs/mMBQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.0/typed.min.js" integrity="sha512-zKaK6G2LZC5YZTX0vKmD7xOwd1zrEEMal4zlTf5Ved/A1RrnW+qt8pWDfo7oz+xeChECS/P9dv6EDwwPwelFfQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="js/main.js"></script>
 
 </body>
