--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="utf-8">
     <title>My Resume || Ivan Rifqi Riadhy</title>
-    <meta content="width=device-widht, initial-scale=1.0" name="viewport" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
     <!--/ CSS /-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.css" integrity="sha512-Woz+DqWYJ51bpVk5Fv0yES/edIMXjj3Ynda+KWTIkGoynAMHrqTcDUQltbipuiaD5ymEo9520lyoVOo9jCQOCA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="css/style.css" rel="stylesheet" />
@@ -20,19 +20,19 @@
             <div class="navbar-collapse collapse justify-content-end" id="navbarDefault">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link js-scroll active" href="#home">Home</a>
+                        <a id="#home-nav" class="nav-link js-scroll active" href="#home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll" href="#about">About</a>
+                        <a id="about-nav" class="nav-link js-scroll" href="#about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll" href="#education">Education</a>
+                        <a id="education-nav" class="nav-link js-scroll" href="#education">Education</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll" href="#hobby">Hobby</a>
+                        <a id="hobby-nav" class="nav-link js-scroll" href="#hobby">Hobby</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll" href="#contact">Contact</a>
+                        <a id="contact-nav" class="nav-link js-scroll" href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -46,7 +46,7 @@
             <div class="table-cell">
                 <div class="container">
                     <h1 class="intro-title mb-4">Halo Nama Saya Ivan</h1>
-                    <p class="intro-subtitle"><span class="text-slider-items">Mahasiswa Teknologi Informasi, Universitas Gadjah Mada</span><strong class="text-slider-items"></strong></p>
+                    <p class="intro-subtitle"><span class="text-slider-items">Mahasiswa Teknologi Informasi Universitas Gadjah Mada</span><strong class="text-slider-items"></strong></p>
                 </div>
             </div>
         </div>
@@ -101,19 +101,19 @@
                             <div class="col-md-6">
                                 <div class="skill-mf">
                                     <p class="title-s">Kemampuan</p>
-                                    <span>WORD</span> <h6 class="pull-right"><span class="counter">65</span></h6>
+                                    <span>Word</span> <h6 class="pull-right"><span1 class="counter">65</span1></h6>
                                     <div class="progress">
                                         <div class="progress-bar" role="progressbar" style="width: 65%;" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
-                                    <span>EXCEL</span> <h6 class="pull-right"><span class="counter">45</span></h6>
+                                    <span>Excel</span> <h6 class="pull-right"><span1 class="counter">45</span1></h6>
                                     <div class="progress">
                                         <div class="progress-bar" role="progressbar" style="width: 45%;" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
-                                    <span>POWERPOINT</span> <h6 class="pull-right"><span class="counter">50</span></h6>
+                                    <span>PowerPoint</span> <h6 class="pull-right"><span1 class="counter">50</span1></h6>
                                     <div class="progress">
                                         <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
-                                    <span>UNITY</span> <h6 class="pull-right"><span class="counter">45</span></h6>
+                                    <span>Unity</span> <h6 class="pull-right"><span1 class="counter">45</span1></h6>
                                     <div class="progress">
                                         <div class="progress-bar" role="progressbar" style="width: 45%;" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
@@ -122,19 +122,19 @@
                             <div class="col-md-6">
                                 <div class="skill-mf">
                                     <p class="title-s">Programming</p>
-                                    <span>C</span> <h6 class="pull-right"><span class="counter">65</span></h6>
+                                    <span>C</span> <h6 class="pull-right"><span1 class="counter">65</span1></h6>
                                     <div class="progress">
                                         <div class="progress-bar" role="progressbar" style="width: 65%;" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
-                                    <span>C#</span> <h6 class="pull-right"><span class="counter">50</span></h6>
+                                    <span>C#</span> <h6 class="pull-right"><span1 class="counter">50</span1></h6>
                                     <div class="progress">
                                         <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
-                                    <span>Python</span> <h6 class="pull-right"><span class="counter">40</span></h6>
+                                    <span>Python</span> <h6 class="pull-right"><span1 class="counter">40</span1></h6>
                                     <div class="progress">
                                         <div class="progress-bar" role="progressbar" style="width: 40%;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
-                                    <span>HTML</span> <h6 class="pull-right"><span class="counter">30</span></h6>
+                                    <span>HTML</span> <h6 class="pull-right"><span1 class="counter">30</span1></h6>
                                     <div class="progress">
                                         <div class="progress-bar" role="progressbar" style="width: 30%;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
@@ -148,8 +148,8 @@
     </section>
     <!--/ ABOUT END /-->
     <!--/ EDUCATION /-->
-    <section id="education" class="educaion-mf route">
-        <div class="countainer">
+    <section id="education" class="education-mf route">
+        <div class="container">
             <div class="row">
                 <div class="col-sm-12">
                     <div class="title-box text-center">
@@ -160,35 +160,35 @@
                     <div class="line-mf"></div>
                 </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-md-4">
-                <div class="education-box">
-                    <div class="education-ico">
-                        <center><img src="img/logo_sd.jpg"></center>
-                    </div>
-                    <div class="education-content">
-                        <h2 class="s-title">SD Stella Maris BSD</h2>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="education-box">
-                    <div class="education-ico">
-                        <center><img src="img/logo_smp.png"></center>
-                    </div>
-                    <div class="education-content">
-                        <h2 class="s-title">SMP Negeri 8 Tangerang Selatan</h2>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="education-box">
+                        <div class="education-ico">
+                            <center><img src="img/logo_sd.jpg"></center>
+                        </div>
+                        <div class="education-content">
+                            <h2 class="s-title">SD Stella Maris BSD</h2>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-4">
-                <div class="education-box">
-                    <div class="education-ico">
-                        <center><img src="img/logo_sma.png"></center>
+                <div class="col-md-4">
+                    <div class="education-box">
+                        <div class="education-ico">
+                            <center><img src="img/logo_smp.png"></center>
+                        </div>
+                        <div class="education-content">
+                            <h2 class="s-title">SMP Negeri 8 TangSel</h2>
+                        </div>
                     </div>
-                    <div class="education-content">
-                        <h2 class="s-title">SMA Negeri 2 Tangerang Selatan</h2>
+                </div>
+                <div class="col-md-4">
+                    <div class="education-box">
+                        <div class="education-ico">
+                            <center><img src="img/logo_sma.png"></center>
+                        </div>
+                        <div class="education-content">
+                            <h2 class="s-title">SMA Negeri 2 TangSel</h2>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -265,6 +265,7 @@
                         <div class="contact-content">
                             <h4>+62-812-8737-5367</h4>
                         </div>
+
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -327,9 +328,13 @@
 
     <!-- JAVA SCRIPT -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/3.4.0/jquery-migrate.min.js" integrity="sha512-QDsjSX1mStBIAnNXx31dyvw4wVdHjonOwrkaIhpiIlzqGUCdsI62MwQtHpJF+Npy2SmSlGSROoNWQCOFpqbsOg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js" integrity="sha512-0QbL0ph8Tc8g5bLhfVzSqxe9GERORsKhIn1IrpxDAgUsbBGz/V7iSav2zzW325XGd1OMLdL4UiqRJj702IeqnQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery.counterup@2.1.0/jquery.counterup.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js" integrity="sha512-CEiA+78TpP9KAIPzqBvxUv8hy41jyI3f2uHi7DGp/Y/Ka973qgSdybNegWFciqh6GrN2UePx2KkflnQUbUhNIA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js" integrity="sha512-k2GFCTbp9rQU412BStrcD/rlwv1PYec9SNrkbQlo6RZCf75l6KcC3UwDY8H5n5hl4v77IDtIPwOk9Dqjs/mMBQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.0/typed.min.js" integrity="sha512-zKaK6G2LZC5YZTX0vKmD7xOwd1zrEEMal4zlTf5Ved/A1RrnW+qt8pWDfo7oz+xeChECS/P9dv6EDwwPwelFfQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.6/typed.min.js"></script>
     <script src="js/main.js"></script>
 
 </body>
