--- a/index.html
+++ b/index.html
@@ -258,65 +258,76 @@
             </div>
             <div class="row">
                 <div class="col-md-4">
-                    <div class="contact-box">
-                        <div class="contact-ico">
-                            <span class="ico-circle"><i class="fa fa-phone"></i></span>
+                    <a href="https://wa.me/6281287375367">
+                        <div class="contact-box">
+                            <div class="contact-ico">
+                                <span class="ico-circle"><i class="fa fa-phone"></i></span>
+                            </div>
+                            <div class="contact-content">
+                                <h4>+62-812-8737-5367</h4>
+                            </div>
                         </div>
-                        <div class="contact-content">
-                            <h4>+62-812-8737-5367</h4>
-                        </div>
-
-                    </div>
+                    </a>
                 </div>
                 <div class="col-md-4">
-                    <div class="contact-box">
-                        <div class="contact-ico">
-                            <span class="ico-circle"><i class="fa-solid fa-envelope"></i></span>
+                    <a href="https://mailto: ivanrifqi1002@gmail.com">
+                        <div class="contact-box">
+                            <div class="contact-ico">
+                                <span class="ico-circle"><i class="fa-solid fa-envelope"></i></span>
+                            </div>
+                            <div class="contact-content">
+                                <h4>ivanrifqi1002@gmail.com</h4>
+                            </div>
                         </div>
-                        <div class="contact-content">
-                            <h4>ivanrifqi1002@gmail.com</h4>
-                        </div>
-                    </div>
+                    </a>
                 </div>
                 <div class="col-md-4">
-                    <div class="contact-box">
-                        <div class="contact-ico">
-                            <span class="ico-circle"><i class="fa-brands fa-facebook"></i></span>
+                    <a href="https://www.facebook.com/ivan.rifqi.3">
+                        <div class="contact-box">
+                            <div class="contact-ico">
+                                <span class="ico-circle"><i class="fa-brands fa-facebook"></i></span>
+                            </div>
+                            <div class="contact-content">
+                                <h4>Ivan Rifqi</h4>
+                            </div>
                         </div>
-                        <div class="contact-content">
-                            <h4>Ivan Rifqi</h4>
-                        </div>
-                    </div>
+                    </a>
                 </div>
                 <div class="col-md-4">
-                    <div class="contact-box">
-                        <div class="contact-ico">
-                            <span class="ico-circle"><i class="fa-brands fa-instagram"></i></span>
+                    <a href="https://www.instagram.com/ivan.q02/">
+                        <div class="contact-box">
+                            <div class="contact-ico">
+                                <span class="ico-circle"><i class="fa-brands fa-instagram"></i></span>
+                            </div>
+                            <div class="contact-content">
+                                <h4>ivan.q02</h4>
+                            </div>
                         </div>
-                        <div class="contact-content">
-                            <h4>ivan.q02</h4>
-                        </div>
-                    </div>
+                    </a>
                 </div>
                 <div class="col-md-4">
-                    <div class="contact-box">
-                        <div class="contact-ico">
-                            <span class="ico-circle"><i class="fa-brands fa-linkedin"></i></span>
+                    <a href="https://www.linkedin.com/in/ivan-rifqi-riadhy-95190b20b/">
+                        <div class="contact-box">
+                            <div class="contact-ico">
+                                <span class="ico-circle"><i class="fa-brands fa-linkedin"></i></span>
+                            </div>
+                            <div class="contact-content">
+                                <h4>Ivan Rifqi Riadhy</h4>
+                            </div>
                         </div>
-                        <div class="contact-content">
-                            <h4>Ivan Rifqi Riadhy</h4>
-                        </div>
-                    </div>
+                    </a>
                 </div>
                 <div class="col-md-4">
-                    <div class="contact-box">
-                        <div class="contact-ico">
-                            <span class="ico-circle"><i class="fa-brands fa-twitter"></i></span>
+                    <a href="https://twitter.com/IvQ11601175">
+                        <div class="contact-box">
+                            <div class="contact-ico">
+                                <span class="ico-circle"><i class="fa-brands fa-twitter"></i></span>
+                            </div>
+                            <div class="contact-content">
+                                <h4>IvQ</h4>
+                            </div>
                         </div>
-                        <div class="contact-content">
-                            <h4>IvQ</h4>
-                        </div>
-                    </div>
+                    </a>
                 </div>
             </div>
         </div>
